--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "popper": "^1.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-parallax": "^2.2.0",
     "react-redux": "^7.0.2",
